2006-03-10  Roland Scheidegger  <rscheidegger_lists@hispeed.ch>
	* man/radeon.man:
	* src/radeon_driver.c: (RADEONSetupMemXAA_DRI), (RADEONScreenInit):
	Use "FBTexPercent" option for XAA too (only for increasing
	memory reserved for textures).

2006-03-10  Benjamin Herrenschmidt  <benh@kernel.crashing.org>

	* src/radeon.h:
	* src/radeon_dri.c: (RADEONDRIGartHeapInit), (RADEONDRIGetVersion),
	(RADEONDRIScreenInit), (RADEONDRIInitPageFlip), (RADEONDRIResume),
	(RADEONDRIAllocatePCIGARTTable):
	* src/radeon_driver.c: (RADEONInitMemoryMap),
	(RADEONGetAccessibleVRAM), (RADEONPreInitConfig),
	(RADEONPreInitDRI), (RADEONPreInitColorTiling), (RADEONPreInit),
	(RADEONScreenInit), (RADEONRestoreMode):
	More memory map fixes !!! This time, we add a way to get the DRM
	kernel module version early, in order to properly limit the
	framebuffer size when a module that doesn't support the new map is
	loaded. That will improve backward compatibility. I also made the
	minimum required kernel module version 1.3 which hopefully shouldn't
	be a problem for anybody, and cleaned up the ordering in which we test
	for DRM version to enable features

2006-03-09  Michel Dänzer  <michel@daenzer.net>

	* src/radeon_driver.c: (RADEONGetClockInfo), (RADEONGetVRamType),
	(RADEONPreInitConfig):
	Bugzilla #5766 <https://bugs.freedesktop.org/show_bug.cgi?id=5766>
	Patch #4636  <https://bugs.freedesktop.org/attachment.cgi?id=4636>
	- Acknowledge that RN50 only has one CRTC, and use this to distinguish
	  it from RV100.
	- Fix detection of RN50 memory type and bus width.
	- Model RN50 memory bandwidth limits by capping the pixel clock range
	  based on memory clock, bpp and memory bus width.
	(ATI Technologies Inc.)

2006-03-03  Michel Dänzer  <michel@daenzer.net>

	* man/radeon.man:
	* src/radeon_driver.c: (RADEONScreenInit):
	* src/radeon_exa.c: (RADEONSetupMemEXA):
	Add Option "FBTexPercent" to override the amount of video RAM reserved
	for OpenGL textures with EXA.
